# python5

./: .gitignore  README.md  TODO  python5.cabal  stack.yaml  test
examples/: Test.hs  calc.hs  control.hs  data.hs  dict.hs  fib.hs  functions.hs  io.hs  python5-examples.cabal  types.hs  types.py
python5/: python5.cabal
python5-prelude/: Prelude.hs  python5-prelude.cabal
python5-prelude/Control/: Monad.hs
python5-prelude/System/: Environment.hs
python5/src/Python5/: IO.hs  Operator.hs
python5/src/Python5/Builtin/: Abs.hs  Control.hs  Exceptions.hs  List.hs  Print.hs
python5/src/Python5/Collections/: ABC.hs
python5/tests/: Control.hs  Functions.hs
show/: index.html
show/css/: fonts.css  reveal.css
show/css/theme/: yandex.css
show/fonts/InputMono/: InputMono-Regular.eot
src/Python5/: Builtin.hs  Operator.hs  Sys.hs
src/Python5/Builtin/: Abs.hs  Control.hs  Exceptions.hs  Extra.hs  Print.hs  Str.hs
src/Python5/Collections/: ABC.hs
tests/: Builtin.hs  Control.hs  Functions.hs  IO.hs  Main.hs  Operator.hs  TestsMain.hs  Types.hs
tests/Local/Test/: Prelude.hs
tests/Test/Tasty/HUnit/: X.hs
