name:           python5
version:        0.0.0.0
synopsis:       Hypothetic Python 5 implementation
description:    A Haskell library that implements basic Python 3 features.
license:        GPL-3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       Language
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
    type:     git
    location: https://github.com/cblp/python5

library
    build-depends:    base      >= 4.6    && < 4.8
                    , lens      >= 4.1.2  && < 4.8
                    , MissingH  >= 1.2.1  && < 1.4
    default-language: Haskell2010
    exposed-modules:  Python5.Builtin
                      Python5.Builtin.Print
                      Python5.Builtin.Str
                      Python5.IO
                      Python5.Operator
    ghc-options:      -Wall
    hs-source-dirs:   src

test-suite tests
    build-depends:    base  >= 4.6    && < 4.8
                    , hspec >= 1.11.0 && < 1.12
                    , python5
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    hs-source-dirs:   tests
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
