name:           python5
version:        0.0.0.0
synopsis:       Hypothetic Python 5 implementation
description:    A Haskell library that implements basic Python 3 features.
license:        GPL-3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       Language
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
    type:     git
    location: https://github.com/cblp/python5

library
    build-depends:    base      >= 4.6    && < 4.9
                    , lens      >= 4.1.2  && < 4.12
                    , MissingH  >= 1.2.1  && < 1.4
    default-language: Haskell2010
    exposed-modules:  Python5.Builtin
                      Python5.IO
                      Python5.Operator
    ghc-options:      -Wall -fno-warn-deprecated-flags
    hs-source-dirs:   src
    other-modules:    Python5.Builtin.Control
                      Python5.Builtin.Extra
                      Python5.Builtin.List
                      Python5.Builtin.Print
                      Python5.Builtin.Str

test-suite tests
    build-depends:    base
                    , hspec >= 1.11 && < 1.12
                    , python5
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    hs-source-dirs:   tests
    main-is:          Main.hs
    type:             exitcode-stdio-1.0

test-suite examples
    build-depends:    base
                    , directory     >= 1.2.1  && < 1.3
                    , filepath      >= 1.3    && < 1.5
                    , hspec
                    , lens
                    , process       >= 1.2.3  && < 1.3
                    , transformers  >= 0.3    && < 0.5
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    hs-source-dirs:   examples
    main-is:          Test.hs
    type:             exitcode-stdio-1.0
