name:           python5
version:        0.0.0.0
synopsis:       Hypothetic Python 5 implementation
description:    A Haskell library that implements basic Python 3 features.
license:        GPL-3
license-file:   LICENSE
author:         Yuriy Syrovetskiy
maintainer:     cblp@cblp.su
category:       Language
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
    type:     git
    location: https://github.com/cblp/python5

library
    build-depends:      base
                      , hashable
                      , MissingH
                      , unordered-containers
    default-extensions: DeriveDataTypeable
                        LambdaCase
    default-language:   Haskell2010
    exposed-modules:    Python5.Builtin
                        Python5.Collections.ABC
                        Python5.IO
                        Python5.Operator
                        Python5.Sys
    ghc-options:        -Wall -fno-warn-deprecated-flags
    hs-source-dirs:     src
    other-modules:      Python5.Builtin.Abs
                        Python5.Builtin.Control
                        Python5.Builtin.Exceptions
                        Python5.Builtin.Extra
                        Python5.Builtin.List
                        Python5.Builtin.Print
                        Python5.Builtin.Str

test-suite tests
    build-depends:    base
                    , python5
                    , tasty
                    , tasty-hunit
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    hs-source-dirs:   tests
    main-is:          Main.hs
    other-modules:    Builtin
                      Control
                      Functions
                      IO
                      Operator
                      Types
    type:             exitcode-stdio-1.0

test-suite examples
    build-depends:    base
                    , directory
                    , filepath
                    , process
                    , python5
                    , tasty
                    , tasty-hunit
                    , transformers
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    hs-source-dirs:   examples
    main-is:          Test.hs
    type:             exitcode-stdio-1.0
