name:           python5-examples
version:        0.0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
    default-language:   Haskell2010

test-suite examples
    build-depends:      base
                      , directory
                      , filepath
                      , process
                      , python5
                      , tasty
                      , tasty-hunit
                      , transformers
    default-language:   Haskell2010
    ghc-options:        -Wall -Werror
    main-is:            Test.hs
    type:               exitcode-stdio-1.0
