name:           python5-prelude
version:        0.0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
    build-depends:      base
                      , python5
    default-extensions: PackageImports
    default-language:   Haskell2010
    exposed-modules:    Prelude
                        Control.Monad
                        System.Environment
